[package]
name = "jemma"
version = "0.1.0"
authors = ["Otto Harju <otto.harju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decipher = { path = "decipher" }
ephemeral = { path = "ephemeral" }
futures = { version="0.3", features = ["thread-pool"] }
